src/test/deca/context/invalid/tests/OpArithIcompatibleWithMthod2.deca
// Description:
//       Teste d'Opération Arithmetique incompatible à pour l'un des opérandes
//       un identificateur de methode de type int 
// Resultats: 
//      Ligne 12: l'une de membre de l'operation est une méthod
// 
// Historique:
//      cree le 22/01/2023
class A{
  int f(){
    int x = 3 + 2;
    x = x + f;
    return x;
  }
}
